--- a/src/components/styles/appForm.css
+++ b/src/components/styles/appForm.css
@@ -3,6 +3,7 @@
 form{
     display: grid;
     grid-template-columns: 12em 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 
@@ -43,4 +44,27 @@ button{
 
 .col-4{
     grid-column: 4/5;
+}
+
+.row-1{
+    grid-row: 1;
+}
+
+.row-2{
+    grid-row: 2;
+}
+
+.row-3{
+    grid-row: 3;
+}
+
+.row-4{
+    grid-row: 4;
+}
+.row-5{
+    grid-row: 5;
+}
+
+.row-6{
+    grid-row: 6;
 }
