--- a/src/components/styles/ApplicationItems.css
+++ b/src/components/styles/ApplicationItems.css
@@ -1,12 +1,51 @@
-.app-items {
+
+
+
+
+a{
+    text-decoration: none;
+}
+
+
+
+.app-home-items{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center;
+    margin: 0 auto;
     width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    list-style: none;
+    max-width: 100%;
+    /* background-color: #8ECAE6; */
+    background-color: #219EBC;
+    padding: 0.5em;
+    max-width: 80%;
+    margin: 1em auto;
+    border-radius: 5px;
+}
+
+.app-home-items h3{
+    color: red;
+    display: flex;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2em;
+    font-weight: 300;
+}
+
+.app-home-items p{
+    color: white;
+    margin: 0 10px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
 
 }
+
+.app-home-items h4{
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
+
+.btn-container{
+    display: flex;
+}
+
