--- a/src/components/styles/ApplicationItems.css
+++ b/src/components/styles/ApplicationItems.css
@@ -25,7 +25,7 @@ a{
 }
 
 .app-home-items h3{
-    color: red;
+    color: #ffb703;
     display: flex;
     font-family: 'Poppins', sans-serif;
     font-size: 1.2em;
@@ -43,6 +43,8 @@ a{
 .app-home-items h4{
     color: white;
     font-family: 'Poppins', sans-serif;
+    font-size: 1.2em;
+    border-bottom: 1px solid #FB8500;
 }
 
 .btn-container{
@@ -56,4 +58,11 @@ a{
     border: none;
     background-color: #FB8500;
     color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px white;
+}
+
+.info-btn:hover, .del-btn:hover, .edit-btn:hover{
+    background-color: white;
+    color: #FB8500;
 }
