--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -14,6 +14,14 @@ h2{
     border-radius: 5px;
     background-color: #FB8500;
     color: white;
+    box-shadow: 0px 0px 5px white;
+
+}
+
+.top-text button:hover{
+    background-color: white;
+    color: #FB8500;
+
 }
 
 
