--- a/src/components/styles/ApplicationItems.css
+++ b/src/components/styles/ApplicationItems.css
@@ -11,17 +11,17 @@ a{
 .app-home-items{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
     margin: 0 auto;
-    width: 100%;
-    max-width: 100%;
-    /* background-color: #8ECAE6; */
+    width: 30%;
     background-color: #219EBC;
+    /* background-color: #f93d67; */
     padding: 0.5em;
-    max-width: 80%;
-    margin: 1em auto;
     border-radius: 5px;
+    border: 3px solid #FB8500;
+    height: 20em;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .rejected{
@@ -47,11 +47,19 @@ a{
 
 }
 
+.item-icon{
+    width: 1em;
+    height: auto;
+    margin: 0 10px;
+}
+
 .app-home-items h4{
     color: white;
     font-family: 'Poppins', sans-serif;
-    font-size: 1.2em;
+    font-size: 2em;
     border-bottom: 1px solid #FB8500;
+    font-weight: 800;
+    margin: 0;
 }
 
 .btn-container{
