--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -6,22 +6,31 @@ h2{
     color: white;
 }
 
- .top-text button{
+ .add-app-btn{
     font-family: 'Poppins', sans-serif;
-    margin: 3em;
     padding: 1em;
     border: none;
     border-radius: 5px;
     background-color: #FB8500;
     color: white;
     box-shadow: 0px 0px 5px white;
-
 }
+
+
 
 .top-text button:hover{
     background-color: white;
     color: #FB8500;
+}
 
+.stats-btn{
+    font-family: 'Poppins', sans-serif;
+    padding: 1em;
+    border: none;
+    border-radius: 5px;
+    background-color: #FB8500;
+    color: white;
+    box-shadow: 0px 0px 5px white;
 }
 
 
@@ -30,9 +39,15 @@ h2{
     max-width: 100%;
 }
 
+.app-items-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .top-text{
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    margin-left: 8.2em;
+
 }
 
