--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 body{
-    background-color: #023047;
+    /* background-color: #023047; */
+    background: rgb(1,48,71);
+    background: -moz-linear-gradient(171deg, rgba(1,48,71,1) 65%, rgba(251,133,0,1) 100%);
+    background: -webkit-linear-gradient(171deg, rgba(1,48,71,1) 65%, rgba(251,133,0,1) 100%);
+    background: linear-gradient(171deg, rgba(1,48,71,1) 65%, rgba(251,133,0,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#013047",endColorstr="#fb8500",GradientType=1);
 }
 
 h1{
@@ -12,8 +17,10 @@ h1{
 }
 
 header{
-    background-color: #FFB703;
+    background-color: #FFB704;
+    /* background-color: #ff0347c7; */
     box-shadow: 0px 0px 10px white;
+
 }
 
 .home-container h2{
