--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -11,16 +11,20 @@ h2{
     padding: 1em;
     border: none;
     border-radius: 5px;
-    background-color: #FB8500;
     color: white;
     box-shadow: 0px 0px 5px white;
+    background-image: linear-gradient(to right, #FF512F 0%, #DD2476  51%, #FF512F  100%);
+    transition: 0.5s;
+    background-size: 200% auto;
+
+
 }
 
-
-
 .top-text button:hover{
-    background-color: white;
-    color: #FB8500;
+    background-position: right center; 
+    color: #fff;
+    text-decoration: none;
+    transform: scale(1.1);
 }
 
 .stats-btn{
@@ -31,6 +35,13 @@ h2{
     background-color: #FB8500;
     color: white;
     box-shadow: 0px 0px 5px white;
+    margin-left: 6em;
+    width: 10em;
+    background-image: linear-gradient(to right, #FF512F 0%, #DD2476  51%, #FF512F  100%);
+   transition: 0.5s;
+   background-size: 200% auto;
+
+
 }
 
 
@@ -50,4 +61,30 @@ h2{
     margin-left: 8.2em;
 
 }
+
+
+
+
+
+
+
+.btn-grad {background-image: linear-gradient(to right, #FF512F 0%, #DD2476  51%, #FF512F  100%)}
+.btn-grad {
+   margin: 10px;
+   padding: 15px 45px;
+   text-align: center;
+   text-transform: uppercase;
+   transition: 0.5s;
+   background-size: 200% auto;
+   color: white;            
+   box-shadow: 0 0 20px #eee;
+   border-radius: 10px;
+   display: block;
+ }
+
+ .btn-grad:hover {
+   background-position: right center; /* change the direction of the change here */
+   color: #fff;
+   text-decoration: none;
+ }
 
