added responsiveness to home page for mobile and tabblet sizes

--- a/src/components/styles/ApplicationItems.css
+++ b/src/components/styles/ApplicationItems.css
@@ -10,7 +10,7 @@ a{
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto 5em;
-    width: 30%;
+    width: 30em;
     background-color: #219EBC;
     /* background-color: #f93d67; */
     padding: 0.5em;
