fixed bug where company names would show up more than once in the stats company names array

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,5 @@
 body{
-    /* background-color: #023047; */
-    background: rgb(1,48,71);
-    background: -moz-linear-gradient(171deg, rgba(1,48,71,1) 65%, rgba(251,133,0,1) 100%);
-    background: -webkit-linear-gradient(171deg, rgba(1,48,71,1) 65%, rgba(251,133,0,1) 100%);
-    background: linear-gradient(171deg, rgba(1,48,71,1) 65%, rgba(251,133,0,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#013047",endColorstr="#fb8500",GradientType=1);
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: #F7F0F0;
 }
 
 h1{
