--- a/src/components/styles/appForm.css
+++ b/src/components/styles/appForm.css
@@ -45,7 +45,7 @@ label{
     margin-bottom: 5px;
     margin-left: 1em;
     font-family: 'Poppins', sans-serif;
-    color: white;
+    color: black;
     grid-column: 1/2;
 }
 
