--- a/src/components/styles/stats.css
+++ b/src/components/styles/stats.css
@@ -7,12 +7,12 @@
     padding: 1em;
     width: 100%;
     height: 100vh;
-    box-shadow: 0px 0px 10px white;
+    box-shadow: 0px 0px 10px black;
 }
 
 .stats-container h2{
     font-family: 'Poppins', sans-serif;
-    color: white;
+    color: black;
     margin: 0;
     padding: 1em;
     font-size: 1.5em;
